--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,9 @@
 #   gem 'sqlite3'
 development:
   adapter: sqlite3
-  database: db/development.sqlite3
+  #adapter: postgresql
+  #encoding: utf8
+  database: db/development.sqlite3 
   pool: 5
   timeout: 5000
 
@@ -14,12 +16,14 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: sqlite3
-  database: db/test.sqlite3
+  #adapter: postgresql
+  database: db/development.sqlite3
   pool: 5
   timeout: 5000
 
 production:
   adapter: sqlite3
-  database: db/production.sqlite3
+  #adapter: postgresql
+  database: db/development.sqlite3
   pool: 5
   timeout: 5000
